# PLS

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  PLSConfig.cmake  README  README.md  nir.csv  octane.csv  pls.cpp  pls.h  pls_main.cpp  test.cpp  toyX.csv  toyY.csv  utility.cpp  utility.h
.github/: CONTRIBUTING.md
include/: pls.h
include/PLS/: TypeDefs.h  pls.h  types.h
packaging/: CMakeLists.txt
src/: main.cpp  pls.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  main.cpp
